fix z-index

--- a/src/emoji-mart.css
+++ b/src/emoji-mart.css
@@ -5,6 +5,8 @@
 }
 
 .emoji-mart {
+  z-index: 1000;
+  position: relative;
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
   font-size: 16px;
   display: inline-block;
